# kedro_databricks

./: README.md  StartKedro.ipynb
learn-kedro/: README.md  pyproject.toml  requirements.txt
learn-kedro/conf/: logging.yml
learn-kedro/conf/base/: catalog.yml
learn-kedro/docs/source/: conf.py  index.rst
learn-kedro/src/learn_kedro/: README.md  __init__.py  __main__.py  hooks.py  settings.py
learn-kedro/src/learn_kedro/pipelines/iris/: nodes.py  pipeline.py
learn-kedro/tests/: test_pipeline.py
